// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen applications config import-export] should create the applications: the applications have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ application [backupServer]
+ application [cfgObjectTest]
Completed. 2 object(s) imported.
",
}
`;

exports[`[mutagen applications config import-export] should skip the same applications: the applications have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= application [cfgObjectTest]
= application [backupServer]
Completed. 2 object(s) imported.
",
}
`;

exports[`[mutagen applications config import-export] should throw exception when new applications to import miss mandatory properties applications: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - application [cfgObjectTest]:
    - appPrototype
    - autoRestart
    - redundancyType
",
  "stdout": "",
}
`;

exports[`[mutagen applications config import-export] should update the modified applications: the modified applications have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ application [cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
